# flask_project

./: FDataBase.py  README.md  app.py  app_with_bd.py  flsite.db  forms.py  pyproject.toml  user_login.py
static/css/: styles.css
templates/: add_post.html  base.html  contact.html  index.html  login.html  post.html  profile.html  register.html
tests/: test_flask_project.py
