[tool.poetry]
name = "Flask_project"
version = "0.1.0"
description = ""
authors = ["znammikhail <znamenskymihail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.3"
Flask-Login = "^0.6.2"
Flask-WTF = "^1.1.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
